--- a/css/root.less
+++ b/css/root.less
@@ -418,7 +418,7 @@
 	/* Navigation Links */
 	
 	.mobile-wrapper img {
-		height: 38/20em;
+		height: 78/20em;
 		margin-top: 5/20em;
 	}
 	
@@ -478,7 +478,7 @@
         }
 	}
 	
-	.active-menu {
+	#active-menu {
 		border-right: 4/20em solid var(--primary);
 		color: var(--primary);
 	}
@@ -779,7 +779,7 @@
     #footer {
         background: #3A3A3C;
         padding: 62/20em 0 76/20em;
-        font-size:~"min(4vw, 2em)";
+        font-size:~"min(4vw, 1.2em)";
 
         .left-section {
             margin: auto;
