--- a/css/local.css
+++ b/css/local.css
@@ -1,6 +1,9 @@
 /*-- -------------------------- -->
 <---          Landing           -->
 <--- -------------------------- -*/
+main {
+  min-height: 50em;
+}
 /* Mobile */
 @media only screen and (min-width: 0em) {
   #hero {
@@ -9,6 +12,10 @@
     padding-top: 5em;
     position: relative;
     z-index: 1;
+    background: url("/images/landing-mobile.jpg");
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
   }
   #hero:before {
     content: '';
@@ -102,6 +109,10 @@
     padding: 6.15em 0 11.45em 0;
     z-index: 1;
     overflow: hidden;
+    background: url("/images/landing.jpg");
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
   }
   #hero .hero-content {
     display: flex;
@@ -121,6 +132,7 @@
   #hero {
     padding-top: 15em;
     padding-bottom: 14em;
+    background-attachment: fixed;
   }
   #hero .business-casual {
     right: 2.5em;
@@ -145,10 +157,9 @@
     padding: 2.1em;
     width: 90%;
     margin: auto;
-    margin-bottom: 0.5em;
   }
-  #services .service:first-of-type {
-    border-radius: 0.25em 0.25em 0 0;
+  #services .service:nth-of-type(2) {
+    border-bottom: 0.05em solid rgba(73, 181, 176, 0.5);
   }
   #services .service:nth-of-type(2) {
     background: #10625e;
@@ -165,9 +176,6 @@
   }
   #services .service:nth-of-type(2) .button-solid:hover {
     color: #fff;
-  }
-  #services .service:last-of-type {
-    border-radius: 0 0 0.25em 0.25em;
   }
   #services .service h2 {
     color: #fff;
@@ -198,10 +206,13 @@
   }
 }
 /* Large Phone */
-@media only screen and (min-width: 600px) and (max-width: 767px) {
+@media only screen and (min-width: 600px) and (max-width: 790px) {
   #services {
     flex-direction: row;
     flex-wrap: wrap;
+    width: 90%;
+    margin-left: auto;
+    margin-right: auto;
   }
   #services .service:nth-of-type(1) {
     border-right: 0.05em solid rgba(255, 255, 255, 0.05);
@@ -227,7 +238,7 @@
   }
 }
 /* Tablet */
-@media only screen and (min-width: 768px) {
+@media only screen and (min-width: 791px) {
   #services {
     flex-direction: row;
     align-items: flex-end;
@@ -242,7 +253,7 @@
   #services .service {
     margin: 0;
     width: 18.6em;
-    height: 15.85em;
+    height: auto;
     border-radius: 0.25em 0.25em 0 0;
   }
   #services .service:nth-of-type(2) {
