--- a/css/local.less
+++ b/css/local.less
@@ -337,3 +337,51 @@ main {
 @media only screen and (min-width: 1300px) {
 
 }
+
+/*-- -------------------------- -->
+<---           section          -->
+<--- -------------------------- -*/
+
+/* Mobile */
+@media only screen and (min-width: 0em) {
+
+}
+
+/* Tablet */
+@media only screen and (min-width: 48em) {
+
+}
+
+/* Small Desktop */
+@media only screen and (min-width: 64em) {
+
+}
+
+/* Large Desktop */
+@media only screen and (min-width: 1300px) {
+
+}
+
+/*-- -------------------------- -->
+<---           section          -->
+<--- -------------------------- -*/
+
+/* Mobile */
+@media only screen and (min-width: 0em) {
+
+}
+
+/* Tablet */
+@media only screen and (min-width: 48em) {
+
+}
+
+/* Small Desktop */
+@media only screen and (min-width: 64em) {
+
+}
+
+/* Large Desktop */
+@media only screen and (min-width: 1300px) {
+
+}
