--- a/css/local.css
+++ b/css/local.css
@@ -273,3 +273,17 @@ main {
   }
 }
 /* Large Desktop */
+/*-- -------------------------- -->
+<---           section          -->
+<--- -------------------------- -*/
+/* Mobile */
+/* Tablet */
+/* Small Desktop */
+/* Large Desktop */
+/*-- -------------------------- -->
+<---           section          -->
+<--- -------------------------- -*/
+/* Mobile */
+/* Tablet */
+/* Small Desktop */
+/* Large Desktop */
